fix(ci): Broken CSS class

--- a/app/globals.css
+++ b/app/globals.css
@@ -28,11 +28,8 @@
 }
 
 @layer base {
-  * {
-    @apply border-border;
-  }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-[#2E2A44];
   }
 }
 
